# DeSCOPE

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: API.rst  Acknowledgements.md  Datasets.md  Installation.md  Tutorials.md  conf.py  descope.arguments.rst  descope.dataset.rst  descope.inference.rst  descope.logging.rst  descope.tokenizer.rst  descope.trainer.rst  descope.utils.rst  index.rst
docs/source/_static/css/: custom.css
src/descope/: __init__.py  arguments.py  dataset.py  inference.py  logging.py  tokenizer.py  trainer.py  utils.py
src/descope/models/: baselines.py  configuration_descope.py  modeling_descope.py  utils.py
tutorials/ATAC/: README.md  accelerate_config.yaml  test.ipynb  tokenize.ipynb  train.py  train_descope.sh  train_descope_loo.sh
tutorials/RNA/: README.md  test.ipynb  tokenize.ipynb  train.py  train_descope.sh  train_descope_loo.sh
